// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeasurementReading /> renders correctly 1`] = `
.c0 > .sc-EHOje {
  font-size: calc(1em + 0.1em);
}

<div
  className="c0"
>
  <CenteredText>
    1
  </CenteredText>
</div>
`;

exports[`<MeasurementReading /> renders correctly without formatter 1`] = `
.c0 > .sc-EHOje {
  font-size: calc(1em + 0.1em);
}

<div
  className="c0"
>
  <CenteredText>
    1.23
  </CenteredText>
</div>
`;

exports[`<MeasurementReading /> renders passed children 1`] = `
.c0 > .sc-EHOje {
  font-size: calc(1em + 0.1em);
}

<div
  className="c0"
>
  <CenteredText>
    1.23
    <div>
      A children node
    </div>
  </CenteredText>
</div>
`;
